--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=user-service
 server.port=8081
 
 # MongoDB Configuration
-spring.data.mongodb.uri=mongodb://localhost:27017/paint_platform_users
+spring.data.mongodb.uri=mongodb://localhost:27017/artztall_user_db
 spring.data.mongodb.database=paint_platform_users
 
 # Eureka Configuration
@@ -23,8 +23,12 @@ spring.servlet.multipart.max-request-size=10MB
 # Logging Configuration
 logging.level.root=INFO
 logging.level.org.springframework.security=DEBUG
-#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 
 
 
 
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/api/ui
+springdoc.swagger-ui.operationsSorter=method
