--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=user-service
 server.port=8081
 
 # MongoDB Configuration
-spring.data.mongodb.uri=mongodb://localhost:27017/artztall_user_db
-spring.data.mongodb.database=paint_platform_users
+spring.data.mongodb.uri=mongodb+srv://sunerakm2024:ArtEcommercePlatform%402024@artecommerceplatform.zszqk.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=artztall_users_db
 
 # Eureka Configuration
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
