--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,5 +30,5 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 
 
 springdoc.api-docs.path=/api-docs
-springdoc.swagger-ui.path=/api
+springdoc.swagger-ui.path=/api/ui
 springdoc.swagger-ui.operationsSorter=method
