--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.data.mongodb.uri=mongodb+srv://sunerakm2024:ArtEcommercePlatform%402024@a
 spring.data.mongodb.database=artztall_users_db
 
 # Eureka Configuration
-eureka.client.service-url.defaultZone=http://13.200.53.211:8761/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
